[metadata]
name = gscan
version = attr: gscan.VERSION
author = lanXuage & YuSec2021
author_email = lanxuage@gmail.com
description = A golang scanner
long_description = file: README.md
long_description_content_type = text/markdown
keywords = scan, golang
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
  gscan = gscan.main:main